navbar on index, styles, pages for bio and blog

--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
-<html>
-    <h1>
-        Hi, I'm Andrew
-    </h1>
-    <body>
-        <h2>
-            About Me
-        </h2>
-        <p>
-            I'm a software engineer
-        </p>
-        <h2>
-            Here's what I'm working on
-        </h2>
-        <p>
-            I'm working on full stack react with Go, and I want to work on AI and Python
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Andrew's Portfolio</title>
+    <!-- Link to your external stylesheet -->
+    <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+    <header>
+        <h1>Hi, I'm Andrew</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="bio.html">About Me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+
+        <h2>About Me</h2>
+        <p>I'm a software engineer.</p>
+        <h2>Here's what I'm working on</h2>
+        <p>I'm working on full-stack React with Go, and I want to work on AI and Python.</p>
+    </div>
+    <footer>
+        &copy; 2025 Andrew's Portfolio
+    </footer>
+</body>
 </html>
