--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Andrew's Blog</title>
   <link rel="stylesheet" href="styles.css" />
-
-  <!-- Optionally, add some extra styling for blog post containers -->
   <style>
     .blog-post {
       border: 1px solid #ccc;
@@ -16,13 +14,18 @@
     }
     .blog-post h3 {
       margin-top: 0;
-      color: #0073e6;
+      color: #2e5781;
     }
     .blog-post p {
       line-height: 1.6;
     }
     .blog-post a {
       color: #0073e6;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .blog-post a:hover {
+      color: #6281a1;
       text-decoration: none;
       font-weight: bold;
     }
@@ -36,7 +39,6 @@
     <h1>My Blog</h1>
   </header>
 
-  <!-- Navigation Bar -->
   <nav>
     <ul>
       <li><a href="index.html">Home</a></li>
@@ -48,7 +50,6 @@
   <div class="container">
     <h2>Latest Posts</h2>
 
-    <!-- First Blog Post -->
     <div class="blog-post">
       <h3>My First Blog Post</h3>
       <p>
