--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
             <li><a href="blog.html">Blog</a></li>
         </ul>
     </nav>
-    <div class="container">
-
-        <h2>About Me</h2>
-        <p>I'm a software engineer.</p>
-        <h2>Here's what I'm working on</h2>
-        <p>I'm working on full-stack React with Go, and I want to work on AI and Python.</p>
+    <div class="container profile-container">
+        <div class="profile-pic">
+            <img src="media/profileImage.jpeg" alt="Profile Picture" />
+        </div>
+        <div class="profile-intro">
+            <p>I'm a Marine veteran, husband, father, software engineer, leader, mentor, writer, gamer, and a lot of other things.</p>
+            <h2>Here's what I'm working on</h2>
+            <p>I'm working on full-stack React with Go, and I want to work on AI and Python.</p>
+        </div>
     </div>
     <footer>
         &copy; 2025 Andrew's Portfolio
