added contact, cleaned up header titles

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <p>I'm working on full-stack React with Go, and I want to work on AI and Python.</p>
         </div>
     </div>
+    <div class="container">
+        <h2>Contact Me</h2>
+        <p>Are you looking to connect with one of my interests or professional projects?</p>
+        <a href="contact.html"><button class="link-button">Click Here</button></a>
+    </div>
     <footer>
         &copy; 2025 Andrew's Portfolio
     </footer>
