--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <div class="container profile-container">
-        <div class="profile-pic">
+        <div class="profile-pic fadeIn">
             <img src="media/profileImage.jpeg" alt="Profile Picture" />
         </div>
         <div class="profile-intro">
