--- a/bfs.html
+++ b/bfs.html
@@ -7,8 +7,12 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body id="top">
+        <div class="nav-container">
+            <a href="bio.html"><button class="link-button">Back</button></a>
+            <a href="index.html"><button class="link-button">Home</button></a>
+        </div>
         <div class="container">
-
+            
         </div>
     </body>
     <footer>
