--- a/bfs.html
+++ b/bfs.html
@@ -12,7 +12,45 @@
             <a href="index.html"><button class="link-button">Home</button></a>
         </div>
         <div class="container">
-            
+            <h1>
+                Blue Falcon Studios
+            </h1>
+            <h3>Game design and fiction writing</h3>
+            <p>Blue Falcon Studios is dedicated to creating tabletop roleplaying games</p>
+        </div>
+        <div class="container-bio">
+            <div class="text-left">
+                <p>
+                    I've played tabletop roleplaying games with my friends since high school. 
+                    While everyone now can recognize Dungeons and Dragons, my very first game was sitting down at the cafeteria table to see
+                    my friends playing a game called Rifts. A science fantasy game that melded robots and mech suits with monsters and magic
+                    in a post apocalyptic earth, I would go on to own quite a few Palladium games.
+                </p>
+                <p>
+                    Today, I've kept all of the games that I've played over the years. 
+                    Star Wars RPG, Star Trek, Heroes Unlimited, Vampire: The Masquerade, Pathfinder, and many more. 
+                    They diligently sit on my bookshelf, waiting to be pulled to serve as resources to build stories in any game.
+                </p>
+                <p>
+                    Dungeons and Dragons was the most popular game to play by far. 
+                    Amongst all of my friends, across any bulletin board in any game store, there was always a group playing Dungeons and Dragons that was looking for more players.
+                    This was where I started not just playing games but running games as a Dungeon Master, as well as creating my own adventures and stories.
+                </p>
+            </div>
+            <img src="media/bfs-rifts.jpg" class="img-right img-small" alt="rifts-cover"/>
+        </div>
+        <div class="container-bio">
+            <div class="text-right">
+                <h2>Dungeon mastering levels up leadership</h2>
+                <p>
+                    A dungeon master is the key component in nearly every roleplaying group. 
+                    The role is so much more than someone to manage the rules and dictate the actions of the enemies the players face.
+                </p>
+                <p>
+                    A dungeon master for a roleplaying game is the business equivalent of a 
+                    owner, founder, project manager, mentor, graphic desgner, marketing, as well as any other role that may be needed at a moment's notice.
+                </p>
+            </div>
         </div>
     </body>
     <footer>
