added nff page, added website links to nff and bfs

--- a/bfs.html
+++ b/bfs.html
@@ -15,6 +15,7 @@
             <h1>
                 Blue Falcon Studios
             </h1>
+            <a href="https://www.bluefalcon.games">www.bluefalcon.games</a>
             <h3>Game design and fiction writing</h3>
             <p>Blue Falcon Studios is dedicated to creating tabletop roleplaying games</p>
         </div>
@@ -51,6 +52,10 @@
                     owner, founder, project manager, mentor, graphic desgner, marketing, as well as any other role that may be needed at a moment's notice.
                 </p>
             </div>
+        </div>
+        <div class="container-bio">
+            <h2>Solar Arcanum 2199</h2>
+            <p>My first published game, Solar Arcanum 2199, is a science fantasy</p>
         </div>
     </body>
     <footer>
